fixed spacing for bottom section

--- a/styles/jsurya-good.css
+++ b/styles/jsurya-good.css
@@ -30,6 +30,7 @@ h2 {
 }
 
 a:link {
+	color: black;
 	text-decoration: none;
 	}
 	
@@ -129,8 +130,8 @@ h1 {
 
 .container {
 	float:left;
-	margin-top: 105pt;
-	padding-top: 10em;
+	margin-top: 100pt;
+	padding-top: 2em;
 		background-image: url("../img/green.png");
 }
 
